--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       {
         "label": "Spacecat Solarized",
         "uiTheme": "vs-dark",
-        "path": "./themes/Spacecat Black-color-theme.json"
+        "path": "./themes/Spacecat Solarized-color-theme.json"
       }
     ]
   },
