update gruvcat theme  and space cat theme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spacecat",
   "displayName": "Space Cat Theme",
-  "version": "0.0.21",
+  "version": "0.0.23",
   "description": "A theme from outer space",
   "categories": [
     "Themes"
@@ -38,9 +38,9 @@
   "contributes": {
     "themes": [
       {
-        "label": "Gruv Cat",
+        "label": "Gruvcat",
         "uiTheme": "vs-dark",
-        "path": "./themes/Gruv Cat-color-theme.json"
+        "path": "./themes/Gruvcat-color-theme.json"
       },
       {
         "label": "Space Cat",
@@ -48,9 +48,9 @@
         "path": "./themes/Space Cat-color-theme.json"
       },
       {
-        "label": "Space Cat Gray",
+        "label": "Space Cat Gruved",
         "uiTheme": "vs-dark",
-        "path": "./themes/Space Cat Gray-color-theme.json"
+        "path": "./themes/Space Cat Gruved-color-theme.json"
       },
       {
         "label": "Space Cat Dark",
