--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spacecat",
   "displayName": "Space Cat Themes",
-  "version": "0.0.84",
+  "version": "0.0.86",
   "description": "Themes from outer space",
   "categories": [
     "Themes"
@@ -40,6 +40,11 @@
   },
   "contributes": {
     "themes": [
+      {
+        "label": "Cursed",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Cursed-color-theme.json"
+      },
       {
         "label": "__dark__",
         "uiTheme": "vs-dark",
